Add toggle locale

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2,6 +2,8 @@ ru:
   common:
     errors: 'При заполнении формы возникли ошибки'
     back: 'Назад'
+    create: 'Создать'
+    edit: 'Изменить'
   will_paginate:
     previous_label: '&larr; Туда'
     next_label: 'Сюда &rarr;'
